--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
+    <title>San Diego Top Spots</title>
 </head>
 
 <body>
-    <!-- Write your markup here -->
-
-    <!-- Don't forget to add your <script> tag here -->
+<h1>San Diego Top Spots</h1>
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Link</th>
+        </tr>
+    </thead>
+    <tbody class="table">
+    </tbody>
+</table>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+<script src="main.js" charset="utf-8"></script>
 </body>
 </html>
