--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-<h1>San Diego Top Spots</h1>
+    <div id="hero-image">
+        <h1>San Diego Top Spots</h1>
+        <p id="tagline">Explore what America's finest city has to offer!</p>
+    </div>
 <table>
     <thead>
         <tr>
